--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="services">
             <div class="section"> 
-                <img class="img" src="./img/Tablet.png" alt="tablet">
+                <a href="#"><img class="img" src="./img/Tablet.png" alt="tablet"></a>
                 <p class="heading">responsive design</p>
                 <div class="text">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div class="section">
-                <img src="./img/Settings.png" alt="settings">
+                <a href="#"><img class="img"src="./img/Settings.png" alt="settings"></a>
                 <p class="heading">easy customize</p>
                 <div class="text">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -31,10 +31,9 @@
 
             </div>
             <div class="section">
-                <img  src="./img/Dashboard.png" alt="dishboard ">
+                <a href="#"><img  class="img" src="./img/Dashboard.png" alt="dishboard "></a>
                 <p class="heading">fast and reliable</p>
-                <div class="text">
-                    
+                <div class="text">  
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Delectus blanditiis nihil explicaboquisi commodi 
                 </p>
